Styled logo button, rounded corners and hover feature.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <a class="navbar-brand p-2" href="index.html" id="logo"
+        <a class="navbar-brand p-2 rounded" href="index.html" id="logo"
           >Jacquie Gutierrez</a
         >
         <button
