--- a/portfolio.html
+++ b/portfolio.html
@@ -17,33 +17,33 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <a class="navbar-brand p-2" href="index.html" id="logo">Jacquie Gutierrez</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">About</a>
-              </li>
-            </ul>
-          </div>
-          <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-      </nav>
-      <!-- End of navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <a class="navbar-brand p-2" href="index.html" id="logo">Jacquie Gutierrez</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
+  <!-- End of navbar -->
 
   <!-- Start of container -->
   <div class="container">
@@ -54,6 +54,45 @@
           <hr />
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
+              <!-- <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt=""> -->
+              <div class="card" style="width: 350;">
+                <img src="./assets/imgs/Literate-Listener podsearch.png" class="card-img-top" alt="literate listener">
+                <div class="card-body">
+                  <h5 class="card-title">Literate Listener</h5>
+                  <p class="card-text">Group Project: User can search for a book by author or title then find related
+                    podcasts and play selected podcast on the site.</p>
+                  <p>HTML5, JavaScript, CSS, jQuery, Bootstrap, Open Library API, Listen Notes API</p>
+                  <a href="https://glorvi23.github.io/project-1/">Live link</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-12 col-lg-6">
+              <div class="card" style="width: 350;">
+                <img src="./assets/imgs/weather-entercity.png" class="card-img-top" alt="weather dashboard">
+                <div class="card-body">
+                  <h5 class="card-title">Weather Dashboard</h5>
+                  <p class="card-text">Solo project: Utilizing API calls to provide weather forecast for a desired city.
+                  </p>
+                  <p>HTML5, JavaScript, CSS, jQuery, Bootstrap, OpenWeather API</p>
+                  <a href="https://jacquie24.github.io/weather-dashboard/">Live link</a>
+                </div>
+              </div>
+              <div class="card mt-5" style="width: 350;">
+                <img src="./assets/imgs/day-planner.png" class="card-img-top" alt="weather dashboard">
+                <div class="card-body">
+                  <h5 class="card-title">Work Day Planner</h5>
+                  <p class="card-text">Solo Project: Created a simple work day to do list, where user can enter a task
+                    at a given time and it will be saved on the calendar. Momentjs is incorporated to display current
+                    date and time.</p>
+                  <p>HTML5, JavaScript, CSS, jQuery, Bootstrap, local storage, momentjs</p>
+                  <a href="https://jacquie24.github.io/weather-dashboard/">Live link</a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <!-- <div class="row">
+            <div class="col-sm-6 col-md-12 col-lg-6">
               <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
             </div>
             <div class="col-sm-6 col-md-12 col-lg-6">
@@ -64,15 +103,7 @@
             <div class="col-sm-6 col-md-12 col-lg-6">
               <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
             </div>
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
-            </div>
-          </div>
+          </div> -->
         </article>
       </div>
     </main>
@@ -92,7 +123,8 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <!-- Bootstrap CDN -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  </script>
 
 </body>
 
