--- a/contact.html
+++ b/contact.html
@@ -51,10 +51,18 @@
   <main class="container">
     <section class="row">
       <div class="col-md-8">
-        <form class="block form-horizontal" action="mailto:jgcaption@yahoo.com" method="post" enctype="text/plain">
-          <h1 class="block-header">Contact</h1>
+        <form class="block form-horizontal">
+          <h1 class="block-header">Contact Info</h1>
           <hr />
-          <div class="form-group">
+          <h4>Location:</h4>
+          <p>Hilton Head, South Carolina</p>
+          <h4>Cellphone:</h4>
+          <p>(310) 617-5984</p>
+          <h4 class="info-header">Email:</h4>
+          <p>jgcaption@yahoo.com</p>
+          <h4>LinkedIn:</h4>
+          <a href="https://www.linkedin.com/in/jacquie24/" target="_blank">www.linkedin.com/in/jacquie24</a>
+          <!-- <div class="form-group">
             <label for="name" class="col-sm-2 control-label">Name</label>
             <div class="col-sm-10">
               <input type="name" class="form-control" id="name" placeholder="Name">
@@ -72,7 +80,7 @@
               <textarea id="msg" class="form-control" rows="3" placeholder="Message"></textarea>
             </div>
           </div>
-          <button class="submit-btn" input type="submit">Submit</button>
+          <button class="submit-btn" input type="submit" action="mailto:jgcaption@yahoo.com" method="post" enctype="text/plain">Submit</button> -->
         </form>
       </div>
     </section>
