Changed email into hyperlink, added spacing

--- a/contact.html
+++ b/contact.html
@@ -54,13 +54,14 @@
         <form class="block form-horizontal">
           <h1 class="block-header">Contact Info</h1>
           <hr />
-          <h4>Location:</h4>
-          <p>Hilton Head, South Carolina</p>
-          <h4>Cellphone:</h4>
+          <h3>Jacquie Gutierrez</h3>
+          <h5 class="info-header mt-3">Location:</h5>
+          <p>Hilton Head, SC</p>
+          <h5 class="info-header mt-3">Cellphone:</h5>
           <p>(310) 617-5984</p>
-          <h4 class="info-header">Email:</h4>
-          <p>jgcaption@yahoo.com</p>
-          <h4>LinkedIn:</h4>
+          <h5 class="info-header mt-3">Email:</h5>
+          <a href="mailto:jgcaption@yahoo.com">jgcaption@yahoo.com</a>
+          <h5 class="info-header mt-3">LinkedIn:</h5>
           <a href="https://www.linkedin.com/in/jacquie24/" target="_blank">www.linkedin.com/in/jacquie24</a>
           <!-- <div class="form-group">
             <label for="name" class="col-sm-2 control-label">Name</label>
