Added GitHub link to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,6 +53,13 @@
           <h1 class="block-header">Portfolio</h1>
           <hr />
           <div class="row">
+            <div class="col-sm-12 text-center">
+            <p class="project-text">To see more of my projects, please visit my GitHub page:
+
+            <a href="https://github.com/Jacquie24" target="_blank">github.com/Jacquie24</a>
+          </div>
+        </div>
+          <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
               <!-- <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt=""> -->
               <div class="card" style="width: 350;">
