Added resume download to Contact page.

--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,8 @@
           <a href="mailto:jgcaption@yahoo.com">jgcaption@yahoo.com</a>
           <h5 class="info-header mt-3">LinkedIn:</h5>
           <a href="https://www.linkedin.com/in/jacquie24/" target="_blank">www.linkedin.com/in/jacquie24</a>
+          <h5 class="info-header mt-3">Resume:</h5>
+          <a href="./assets/J. Gutierrez Resume 2021.pdf" download target="_blank">Jacquie Gutierrez PDF</a>
           <!-- <div class="form-group">
             <label for="name" class="col-sm-2 control-label">Name</label>
             <div class="col-sm-10">
