Updated resume, contact, and portfolio with correct project link.

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
                   <p class="card-text">Group Project: User can search for a book by author or title then find related
                     podcasts and play selected podcast on the site.</p>
                   <p>HTML5, JavaScript, CSS, jQuery, Bootstrap, Open Library API, Listen Notes API</p>
-                  <a href="https://glorvi23.github.io/project-1/">Live link</a>
+                  <a href="https://jacquie24.github.io/literate-listener/">Live link</a>
                 </div>
               </div>
             </div>
