Added new pictures to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,38 +63,69 @@
             <div class="col-sm-6 col-md-12 col-lg-6">
               <!-- <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt=""> -->
               <div class="card" style="width: 350;">
-                <img src="./assets/imgs/Literate-Listener podsearch.png" class="card-img-top" alt="literate listener">
+                <img src="./assets/imgs/Literate-Listener.png" class="card-img-top" alt="literate listener">
                 <div class="card-body">
                   <h5 class="card-title">Literate Listener</h5>
                   <p class="card-text">Group Project: User can search for a book by author or title then find related
                     podcasts and play selected podcast on the site.</p>
-                  <p>HTML5, JavaScript, CSS, jQuery, Bootstrap, Open Library API, Listen Notes API</p>
-                  <a href="https://jacquie24.github.io/literate-listener/">Live link</a>
+                  <p>Tools: HTML5, Bootstrap, JavaScript, jQuery, Open Library API, Listen Notes API</p>
+                  <a href="https://jacquie24.github.io/Literate-Listener/">Live link</a>
                 </div>
               </div>
             </div>
             <div class="col-sm-6 col-md-12 col-lg-6">
               <div class="card" style="width: 350;">
-                <img src="./assets/imgs/weather-entercity.png" class="card-img-top" alt="weather dashboard">
+                <img src="./assets/imgs/bird-brains-pic.png" class="card-img-top" alt="bird brains home page">
+                <div class="card-body">
+                  <h5 class="card-title">Bird Brains</h5>
+                  <p class="card-text">Group Project: Bird watching app that allows users to upload photos of sightings and earn points.</p>
+                  <p>Tools: Materialize, Handlebars, jQuery, Node.js, Express, MySQL, Sequelize, Cloudinary, Heroku</p>
+                  <a href="https://bird-brains.herokuapp.com/">Live link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6 col-md-12 col-lg-6">
+              <div class="card mt-5" style="width: 350;">
+                <img src="./assets/imgs/eat-da-burger-pic.png" class="card-img-top" alt="eat the burger">
+                <div class="card-body">
+                  <h5 class="card-title">Eat Da Burger</h5>
+                  <p class="card-text">Solo Project: User can add burger to the list, choose to devour it, or delete the burger.</p>
+                  <p>Tools: Bootstrap, Handlebars, jQuery, Node.js, Express, MySQL, Heroku</p>
+                  <a href="https://shielded-falls-19006.herokuapp.com/">Live link</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-12 col-lg-6">
+              <div class="card mt-5" style="width: 350;">
+                <img src="./assets/imgs/weather-dashboard.png" class="card-img-top" alt="weather dashboard">
                 <div class="card-body">
                   <h5 class="card-title">Weather Dashboard</h5>
                   <p class="card-text">Solo project: Utilizing API calls to provide weather forecast for a desired city.
                   </p>
-                  <p>HTML5, JavaScript, CSS, jQuery, Bootstrap, OpenWeather API</p>
+                  <p>Tools: HTML5, Bootstrap, JavaScript, jQuery, OpenWeather API</p>
                   <a href="https://jacquie24.github.io/weather-dashboard/">Live link</a>
                 </div>
               </div>
+            </div>
+          </div>
+            <div class="row">
+              <div class="col-sm-6 col-md-12 col-lg-6">
               <div class="card mt-5" style="width: 350;">
-                <img src="./assets/imgs/day-planner.png" class="card-img-top" alt="weather dashboard">
+                <img src="./assets/imgs/day-planner.png" class="card-img-top" alt="day planner">
                 <div class="card-body">
                   <h5 class="card-title">Work Day Planner</h5>
                   <p class="card-text">Solo Project: Created a simple work day to do list, where user can enter a task
                     at a given time and it will be saved on the calendar. Momentjs is incorporated to display current
                     date and time.</p>
-                  <p>HTML5, JavaScript, CSS, jQuery, Bootstrap, local storage, momentjs</p>
-                  <a href="https://jacquie24.github.io/weather-dashboard/">Live link</a>
+                  <p>HTML5, Bootstrap, JavaScript, jQuery, local storage, momentjs</p>
+                  <a href="https://github.com/Jacquie24/day-planner">Live link</a>
                 </div>
               </div>
+              </div>
+            </div>
+
 
             </div>
           </div>
@@ -121,7 +152,7 @@
   <footer class="footer">
     <div class="two-toned-footer-color"></div>
     <p class="text-muted text-muted-footer text-center">
-      &copy; Copyright 2018 Your Name
+      &copy; Copyright 2021 Jacquie Gutierrez
     </p>
   </footer>
   <!-- End of footer -->
