--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!-- Start of footer -->
     <footer class="footer">
       <div class="two-toned-footer-color"></div>
-      <p class="text-muted text-muted-footer text-center">&copy; Copyright</p>
+      <p class="text-muted text-muted-footer text-center">&copy; Copyright 2021 Jacquie Gutierrez</p>
     </footer>
     <!-- End of footer -->
 
