--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
   <footer class="footer">
     <div class="two-toned-footer-color"></div>
     <p class="text-muted text-muted-footer text-center">
-      &copy; Copyright
+      &copy; Copyright 2021 Jacquie Gutierrez
     </p>
   </footer>
   <!-- End of footer -->
